k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faas-billing-django
  labels:
    app: faas-billing-django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: faas-billing-django
  template:
    metadata:
      labels:
        app: faas-billing-django
    spec:
      containers:
      - name: django
        image: faas-billing-django:latest  # Локальный образ
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: faas-billing-service
spec:
  selector:
    app: faas-billing-django
  ports:
  - port: 80
    targetPort: 8000
