k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faas-billing-ingress
  annotations:
    kubernetes.io/ingress.class: "kourier"
spec:
  rules:
  - host: "django.knative.demo.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faas-billing-service
            port:
              number: 80
